--- a/HEScoreMicro.UI/src/app/views/address/address.component.html
+++ b/HEScoreMicro.UI/src/app/views/address/address.component.html
@@ -1,5 +1,8 @@
 <section class="address-section">
-  <div class="container">
+  <div class="container py-lg-4 py-md-3 py-2">
+    <h3 class="text-center mb-4">
+      {{ buildingId ? "Update" : "Create new"  }} building
+    </h3>
     <form [formGroup]="addressForm">
       <div class="row">
         <div class="col-md-6">
@@ -207,6 +210,5 @@
         </button>
       </div>
     </form>
-    <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
   </div>
 </section>
