FIX Some minnor issues in validation,routing
make it common building in parent update and submit

--- a/HEScoreMicro.UI/src/app/views/heating-cooling-system/heating-cooling-system.component.html
+++ b/HEScoreMicro.UI/src/app/views/heating-cooling-system/heating-cooling-system.component.html
@@ -624,7 +624,7 @@
                             for="percentageOfDucts"
                             class="text-danger fw-semibold position-absolute"
                           >
-                            Percentage of ducts is invalid
+                            Percentage of ducts is invalid {{ ductLocationItem.get('percentageOfDucts')?.errors | json }}
                           </label>
                         </div>
                       </div>
