FIX common in Distribution System backend
FIX Validation issue in HVAC

FEET dynamic rendering roof,floor,dhw

--- a/HEScoreMicro.UI/src/app/views/about/about.component.html
+++ b/HEScoreMicro.UI/src/app/views/about/about.component.html
@@ -275,7 +275,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <div class="input-box">
             <label for="numberofUnitsInBuilding" class="required">
               Number of Units In Building
@@ -330,7 +330,7 @@
               </label>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-12">
           <div class="input-box">
             <label> Comments </label>
