--- a/HEScoreMicro.UI/src/app/views/water-heater/water-heater.component.html
+++ b/HEScoreMicro.UI/src/app/views/water-heater/water-heater.component.html
@@ -30,7 +30,7 @@
             </div>
           </div>
         </div>
-        <ng-container *ngIf="waterHeaterControl['waterHeaterType'].value">
+        <ng-container *ngIf="waterHeaterControl['waterHeaterType'].value && !waterHeaterControl['waterHeaterType'].value?.startsWith('Boiler with')">
           <div
             class="col-md-6"
             *ngIf="
