--- a/HEScoreMicro.UI/src/app/views/views.component.html
+++ b/HEScoreMicro.UI/src/app/views/views.component.html
@@ -26,6 +26,7 @@
         [input]="building.about"
         (update)="updateBuilding($event)"
         [buildingId]="buildingId"
+        [buildingType]="buildingType"
         (move)="move($event)"
         *ngSwitchCase="0"
       ></app-about>
