FET wall,window generation in Building type 1

--- a/HEScoreMicro.UI/src/app/views/about/about.component.html
+++ b/HEScoreMicro.UI/src/app/views/about/about.component.html
@@ -179,6 +179,7 @@
                 class="text-danger fw-semibold position-absolute"
               >
                 Total Conditioned Floor Area is invalid
+                {{ aboutControl["totalConditionedFloorArea"]?.errors | json }}
               </label>
             </div>
           </div>
