--- a/HEScoreMicro.UI/src/app/views/zone-roof/zone-roof.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-roof/zone-roof.component.html
@@ -141,7 +141,7 @@
                 <input
                   formControlName="roofArea"
                   type="number"
-                  id="roofArea" (input)="oncheck()"
+                  id="roofArea"
                   [placeholder]="
                     roofAtticItem.get('atticOrCeilingType')?.value ==
                     'Cathedral Ceiling'
