--- a/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form [formGroup]="zoneWallForm">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6" *ngIf="buildingType === 0">
         <div class="select-box">
           <label class="required"> Exterior Wall Same </label>
           <ng-select
@@ -34,94 +34,141 @@
           *ngFor="let wallItem of wallsObj.controls; let wallIndex = index"
         >
           <ng-container [formGroupName]="wallIndex">
-            <h4 class="col-12 my-3">Wall : {{ getDirection(wallIndex) }}</h4>
-            <div class="col-md-6">
+            <h4 class="col-12 my-3">
+              Wall{{
+                zoneWallForm.get("exteriorWallSame")?.value === false ||
+                buildingType == 1
+                  ? " : " + getDirection(wallIndex)
+                  : ""
+              }}
+            </h4>
+            <div class="col-md-6" *ngIf="buildingType != 0">
               <div class="select-box">
-                <label class="required"> Construction</label>
+                <label class="required"> Adjacent To </label>
                 <ng-select
-                  [items]="wallConstructionOptions"
+                  [items]="adjacentToOptions"
                   bindLabel="name"
                   [clearable]="true"
                   [closeOnSelect]="true"
                   bindValue="value"
-                  placeholder="Construction"
-                  id="construction"
-                  formControlName="construction"
+                  placeholder="Adjacent To"
+                  id="adjacentTo"
+                  formControlName="adjacentTo"
                 >
                 </ng-select>
                 <div
                   class="errormsg"
                   *ngIf="
-                    (wallItem.get('construction')?.touched ||
-                      wallItem.get('construction')?.dirty) &&
-                    wallItem.get('construction')?.invalid
+                    (wallItem.get('adjacentTo')?.touched ||
+                      wallItem.get('adjacentTo')?.dirty) &&
+                    wallItem.get('adjacentTo')?.invalid
                   "
                 >
                   <label class="text-danger fw-semibold position-absolute">
-                    Construction is invalid
+                    Adjacent To is invalid
                   </label>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="select-box">
-                <label class="required"> Exterior Finish</label>
-                <ng-select
-                  [items]="wallItem.get('exteriorFinishOptions')?.value"
-                  bindLabel="name"
-                  [clearable]="true"
-                  [closeOnSelect]="true"
-                  bindValue="value"
-                  placeholder="Exterior Finish"
-                  id="exteriorFinish"
-                  formControlName="exteriorFinish"
-                >
-                </ng-select>
-                <div
-                  class="errormsg"
-                  *ngIf="
-                    (wallItem.get('exteriorFinish')?.touched ||
-                      wallItem.get('exteriorFinish')?.dirty) &&
-                    wallItem.get('exteriorFinish')?.invalid
-                  "
-                >
-                  <label class="text-danger fw-semibold position-absolute">
-                    Exterior Finish is invalid
-                  </label>
+            <ng-container
+              *ngIf="
+                wallItem.get('adjacentTo')?.value === 'Outside' ||
+                wallItem.get('adjacentTo')?.value !== 'Other Unit'
+              "
+            >
+              <ng-container
+                *ngIf="wallItem.get('adjacentTo')?.value === 'Outside'"
+              >
+                <div class="col-md-6">
+                  <div class="select-box">
+                    <label class="required"> Construction</label>
+                    <ng-select
+                      [items]="wallConstructionOptions"
+                      bindLabel="name"
+                      [clearable]="true"
+                      [closeOnSelect]="true"
+                      bindValue="value"
+                      placeholder="Construction"
+                      id="construction"
+                      formControlName="construction"
+                    >
+                    </ng-select>
+                    <div
+                      class="errormsg"
+                      *ngIf="
+                        (wallItem.get('construction')?.touched ||
+                          wallItem.get('construction')?.dirty) &&
+                        wallItem.get('construction')?.invalid
+                      "
+                    >
+                      <label class="text-danger fw-semibold position-absolute">
+                        Construction is invalid
+                      </label>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="input-box">
-                <label class="required" for="wallInsulationLevel">
-                  Wall Insulation Level
-                </label>
-                <input
-                  formControlName="wallInsulationLevel"
-                  type="number"
-                  id="wallInsulationLevel"
-                  placeholder="Wall Insulation Level"
-                />
-                <div
-                  class="errormsg"
-                  *ngIf="
-                    (wallItem.get('wallInsulationLevel')?.touched ||
-                      wallItem.get('wallInsulationLevel')?.dirty) &&
-                    wallItem.get('wallInsulationLevel')?.invalid
-                  "
-                >
-                  <label
-                    for="wallInsulationLevel"
-                    class="text-danger fw-semibold position-absolute"
+                <div class="col-md-6">
+                  <div class="select-box">
+                    <label class="required"> Exterior Finish</label>
+                    <ng-select
+                      [items]="wallItem.get('exteriorFinishOptions')?.value"
+                      bindLabel="name"
+                      [clearable]="true"
+                      [closeOnSelect]="true"
+                      bindValue="value"
+                      placeholder="Exterior Finish"
+                      id="exteriorFinish"
+                      formControlName="exteriorFinish"
+                    >
+                    </ng-select>
+                    <div
+                      class="errormsg"
+                      *ngIf="
+                        (wallItem.get('exteriorFinish')?.touched ||
+                          wallItem.get('exteriorFinish')?.dirty) &&
+                        wallItem.get('exteriorFinish')?.invalid
+                      "
+                    >
+                      <label class="text-danger fw-semibold position-absolute">
+                        Exterior Finish is invalid
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </ng-container>
+              <div class="col-md-6">
+                <div class="input-box">
+                  <label class="required" for="wallInsulationLevel">
+                    Wall Insulation Level
+                  </label>
+                  <input
+                    formControlName="wallInsulationLevel"
+                    type="number"
+                    id="wallInsulationLevel"
+                    placeholder="Wall Insulation Level"
+                  />
+                  <div
+                    class="errormsg"
+                    *ngIf="
+                      (wallItem.get('wallInsulationLevel')?.touched ||
+                        wallItem.get('wallInsulationLevel')?.dirty) &&
+                      wallItem.get('wallInsulationLevel')?.invalid
+                    "
                   >
-                    Wall Insulation Level is invalid
-                  </label>
+                    <label
+                      for="wallInsulationLevel"
+                      class="text-danger fw-semibold position-absolute"
+                    >
+                      Wall Insulation Level is invalid
+                    </label>
+                  </div>
                 </div>
               </div>
-            </div>
+            </ng-container>
           </ng-container>
         </ng-container>
       </ng-container>
+
     </div>
     <div class="d-flex justify-content-end gap-3 mt-4">
       <button type="button" class="bg-primary btn-style" (click)="onSave()">
