--- a/HEScoreMicro.UI/src/app/views/views.component.html
+++ b/HEScoreMicro.UI/src/app/views/views.component.html
@@ -1,6 +1,6 @@
 <div class="d-md-flex">
   <div
-    class="bg-white z-1 h-fit overflow-auto position-sticky top-0 px-4 pt-lg-3 pt-1 border-end flex-md-column justify-content-md-start flex-md-nowrap gap-md-0 d-flex justify-content-around flex-wrap gap-3"
+    class="bg-white z-1 h-fit overflow-auto position-sticky top-0 px-4 pt-lg-1 pt-1 border-end flex-md-column justify-content-md-start flex-md-nowrap gap-md-0 d-flex justify-content-around flex-wrap gap-3"
   >
     <h6
       class="cursor-pointer text-center my-lg-1 rounded-2 py-md-3 py-1 mb-0"
@@ -20,7 +20,9 @@
   </div>
   <div class="container py-lg-4 py-md-3 py-2">
     @if (building) {
-    <h3 class="text-center mb-4">{{ navs[selectedIndex] }}</h3>
+    <h3 class="text-center mb-4">
+      {{ (selectedIndex == 8 ? "Energy " : "") + navs[selectedIndex] }}
+    </h3>
     <ng-container [ngSwitch]="selectedIndex">
       <app-about
         [input]="building.about"
@@ -79,23 +81,31 @@
       ></app-heating-cooling-system>
       <app-water-heating-system
         [input]="building.waterHeater"
-        (update)="updateBuilding($event)"
         [buildingId]="buildingId"
         [hasBoiler]="hasBoiler"
+        (update)="updateBuilding($event)"
         (move)="move($event)"
         *ngSwitchCase="6"
       ></app-water-heating-system>
       <app-pv-system
         [input]="building.pvSystem"
-        (update)="updateBuilding($event)"
         [buildingId]="buildingId"
+        (update)="updateBuilding($event)"
         (move)="move($event)"
         *ngSwitchCase="7"
       ></app-pv-system>
+      <app-energy-star
+        [input]="building.energyStar"
+        [buildingId]="buildingId"
+        (update)="updateBuilding($event)"
+        (move)="move($event)"
+        *ngSwitchCase="8"
+      >
+      </app-energy-star>
       <app-summary
         [input]="building"
         [buildingId]="buildingId"
-        *ngSwitchCase="8"
+        *ngSwitchCase="9"
       ></app-summary>
     </ng-container>
     <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
